--- a/apps/frontend/src/libs/components/tab-container/styles.module.css
+++ b/apps/frontend/src/libs/components/tab-container/styles.module.css
@@ -1,15 +1,40 @@
-.container {
+.tab-container {
+	display: flex;
+	flex: 1;
+	flex-direction: column;
 	width: 100%;
-	height: 100%;
+	padding: 16px 0;
 }
 
-.navigation {
+.tab-navigation {
 	display: flex;
 	align-items: center;
 }
 
-.tab {
+.tab-item {
+	padding: 8px 16px;
+	font-family: var(--font-family);
+	font-size: var(--font-size-small);
+	font-weight: var(--font-weight-regular);
+	color: var(--color-text-weak);
 	cursor: pointer;
 	background: none;
 	border: none;
+}
+
+.active-tab-item {
+	font-weight: var(--font-weight-semibold);
+	color: var(--color-text-strong);
+	background-color: var(--color-background-base);
+	border-radius: 5px 5px 0 0;
+}
+
+.tab-content {
+	flex: 1;
+	background-color: var(--color-background-base);
+	border-radius: 15px;
+}
+
+.first-tab-active .tab-content {
+	border-radius: 0 15px 15px;
 }
