--- a/apps/frontend/src/libs/components/sidebar/styles.module.css
+++ b/apps/frontend/src/libs/components/sidebar/styles.module.css
@@ -1,21 +1,33 @@
 .container {
 	position: fixed;
-	top: 0;
-	left: 0;
+	inset: 0;
 	z-index: 2;
 	display: flex;
 	height: 100dvh;
 }
 
-.button-container {
+.drawer {
+	z-index: 1;
+	width: max-content;
+	height: 100%;
+	background-color: var(--color-background-base);
+}
+
+.drawer[data-open="true"] {
 	width: 100%;
-	padding: 24px;
+	max-width: 320px;
+	border-right: 1px solid var(--color-brand-50);
+}
+
+.header {
+	display: flex;
+	gap: 68px;
+	align-items: center;
+	width: 100%;
+	padding: 22px 24px;
 }
 
 .close-button {
-	position: absolute;
-	top: 24px;
-	left: 24px;
 	display: flex;
 	align-items: center;
 	justify-content: center;
@@ -77,56 +89,27 @@
 	transform-origin: bottom right;
 }
 
-.drawer {
-	width: 80px;
-	height: 100%;
-	background-color: var(--color-background-base);
-	transition: all 300ms ease;
-}
-
-.drawer[data-open="true"] {
-	width: 320px;
-	border-right: 1px solid var(--color-brand-50);
-}
-
-.backdrop {
-	z-index: 2;
-	width: calc(100vw - 80px);
-	height: 100%;
-	background-color: var(--color-stroke-strong);
-	border: none;
+.logo-image {
+	display: block;
 }
 
 .sidebar {
 	display: flex;
 	flex-direction: column;
-	gap: 56px;
 	max-width: 320px;
 	height: 100%;
 	padding-top: 56px;
-	background-color: var(--color-background-base);
 	border-right: 1px solid var(--color-brand-50);
-}
-
-.button-container a {
-	display: block;
-	margin-left: 96px;
-	pointer-events: none;
-	opacity: 0;
-	transition: opacity 300ms ease;
-}
-
-.drawer[data-open="true"] .button-container a {
-	pointer-events: all;
-	opacity: 1;
-}
-
-.logo {
-	display: block;
 }
 
 .navigation-list {
 	padding: 0;
 	margin: 0;
 	list-style-type: none;
+}
+
+.backdrop {
+	flex: 1;
+	height: 100%;
+	background-color: var(--color-stroke-strong);
 }
