--- a/apps/frontend/src/pages/dashboard/styles.module.css
+++ b/apps/frontend/src/pages/dashboard/styles.module.css
@@ -12,10 +12,13 @@
 
 .carousel-container {
 	width: 50%;
-	margin-bottom: 10rem;
+	margin-bottom: 2rem;
 }
 
 .select-container {
+	display: flex;
+	flex-direction: column;
+	gap: 1rem;
 	width: 50%;
-	margin-bottom: 5rem;
+	margin-bottom: 10rem;
 }
