--- a/apps/frontend/src/libs/components/map/styles.module.css
+++ b/apps/frontend/src/libs/components/map/styles.module.css
@@ -11,3 +11,13 @@
 	width: 100%;
 	height: 100%;
 }
+
+.map-loader-container {
+	position: absolute;
+	top: 50%;
+	left: 50%;
+	display: flex;
+	align-items: center;
+	justify-content: center;
+	transform: translate(-50%, -50%);
+}
