--- a/apps/frontend/src/libs/components/sidebar/styles.module.css
+++ b/apps/frontend/src/libs/components/sidebar/styles.module.css
@@ -11,12 +11,12 @@
 	width: max-content;
 	height: 100%;
 	background-color: var(--color-background-base);
+	border-right: 1px solid var(--color-brand-50);
 }
 
 .drawer[data-open="true"] {
 	width: 100%;
 	max-width: 320px;
-	border-right: 1px solid var(--color-brand-50);
 }
 
 .header {
@@ -96,10 +96,39 @@
 .sidebar {
 	display: flex;
 	flex-direction: column;
+	gap: 48px;
 	max-width: 320px;
 	height: 100%;
 	padding-top: 56px;
-	border-right: 1px solid var(--color-brand-50);
+}
+
+.admin-navigation {
+	position: relative;
+	padding-top: 48px;
+}
+
+.drawer[data-open="true"] .admin-navigation {
+	padding-top: 0;
+}
+
+.list-title {
+	padding: 12px 24px;
+}
+
+.title-text {
+	font-weight: var(--font-weight-semibold);
+	color: var(--color-text-weak);
+}
+
+.admin-navigation::after {
+	position: absolute;
+	bottom: -24px;
+	left: 50%;
+	width: calc(100% - 48px);
+	height: 1px;
+	content: "";
+	background-color: var(--color-stroke-weak);
+	transform: translateX(-50%);
 }
 
 .navigation-list {
