--- a/apps/frontend/src/libs/components/select/styles.module.css
+++ b/apps/frontend/src/libs/components/select/styles.module.css
@@ -26,9 +26,7 @@
 }
 
 .control:focus-within {
-	outline: 2px solid var(--color-stroke-focus);
-	outline-offset: 2px;
-	background-color: initial;
+	border: 1px solid var(--color-stroke-focus);
 }
 
 .menu {
@@ -74,21 +72,21 @@
 .multi-value-remove {
 	color: var(--color-text-strong);
 	cursor: pointer;
+	transition: background-color 0.3s ease;
 }
 
 .multi-value-remove:hover {
-	color: var(--color-base);
-	background-color: var(--color-text-error);
+	background-color: var(--color-fill-hover);
 }
 
 .clear-indicator {
 	color: var(--color-text-strong);
 	cursor: pointer;
+	transition: background-color 0.3s ease;
 }
 
 .clear-indicator:hover {
-	color: var(--color-base);
-	background-color: var(--color-text-error);
+	background-color: var(--color-fill-hover);
 }
 
 @media (width <=768px) {
