--- a/apps/frontend/src/libs/components/sidebar/styles.module.css
+++ b/apps/frontend/src/libs/components/sidebar/styles.module.css
@@ -102,16 +102,19 @@
 	padding-top: 56px;
 }
 
-.admin-navigation {
+.group {
 	position: relative;
+}
+
+.shifted {
 	padding-top: 48px;
 }
 
-.drawer[data-open="true"] .admin-navigation {
+.drawer[data-open="true"] .group {
 	padding-top: 0;
 }
 
-.list-title {
+.title {
 	padding: 12px 24px;
 }
 
@@ -120,7 +123,7 @@
 	color: var(--color-text-weak);
 }
 
-.admin-navigation::after {
+.group:not(:last-child)::after {
 	position: absolute;
 	bottom: -24px;
 	left: 50%;
