--- a/apps/frontend/src/libs/components/sidebar/styles.module.css
+++ b/apps/frontend/src/libs/components/sidebar/styles.module.css
@@ -3,7 +3,12 @@
 	inset: 0;
 	z-index: 2;
 	display: flex;
+	width: max-content;
 	height: 100dvh;
+}
+
+.container:has([data-open="true"]) {
+	width: 100%;
 }
 
 .drawer {
@@ -142,6 +147,5 @@
 
 .backdrop {
 	flex: 1;
-	height: 100%;
 	background-color: var(--color-stroke-strong);
 }
