--- a/apps/frontend/src/libs/components/input/styles.module.css
+++ b/apps/frontend/src/libs/components/input/styles.module.css
@@ -22,12 +22,29 @@
 	color: var(--color-text-strong);
 }
 
+.input-container {
+	position: relative;
+	width: 100%;
+}
+
 .input {
-	padding: 12px 16px;
+	position: relative;
+	width: 100%;
+	padding: 12px 50px 12px 12px;
 	font-size: var(--font-size-small);
 	line-height: 1.5;
+	background-color: var(--color-background-base);
 	border-radius: 8px;
 	transition: background-color 0.2s ease-in-out;
+}
+
+.input,
+.input:focus {
+	border: 1px solid var(--color-stroke-strong);
+}
+
+.input:hover {
+	background-color: var(--color-fill-hover);
 }
 
 .input.input-error {
@@ -39,15 +56,6 @@
 .input-error:hover,
 .input-error:focus {
 	background-color: var(--color-fill-error-weak);
-}
-
-.input,
-.input:focus {
-	border: 1px solid var(--color-stroke-strong);
-}
-
-.input:hover {
-	background-color: var(--color-fill-hover);
 }
 
 .input:focus {
@@ -64,9 +72,33 @@
 	display: none;
 }
 
+.password-toggle-button {
+	position: absolute;
+	top: 50%;
+	right: 2px;
+	z-index: 2;
+	display: flex;
+	align-items: center;
+	justify-content: center;
+	width: 50px;
+	padding: 0;
+	cursor: pointer;
+	background-color: transparent;
+	border: none;
+	transform: translateY(-50%);
+}
+
+.password-toggle-button-icon {
+	stroke: var(--color-stroke-strong);
+}
+
+.password-toggle-button:hover .password-toggle-button-icon {
+	stroke: var(--color-fill-press);
+}
+
 @media (width <= 768px) {
 	.input {
-		padding: 8px 10px;
+		padding: 8px 50px 8px 10px;
 	}
 
 	.label-caption {
