--- a/apps/frontend/src/libs/components/map-provider/styles.module.css
+++ b/apps/frontend/src/libs/components/map-provider/styles.module.css
@@ -1,15 +1,27 @@
 .map-wrapper {
 	position: relative;
-	display: flex;
-	flex-direction: column;
-	width: 100%;
-	height: 100%;
-}
-
-.map {
-	position: relative;
-	flex: 1;
 	width: 100%;
 	height: 100%;
 	overflow: hidden;
+}
+
+.map-overlays {
+	position: absolute;
+	top: 0;
+	left: 0;
+	width: 100%;
+	height: 100%;
+	pointer-events: none;
+}
+
+.map-overlays > * {
+	pointer-events: auto;
+}
+
+.map {
+	position: absolute;
+	top: 0;
+	left: 0;
+	width: 100%;
+	height: 100%;
 }
