--- a/apps/frontend/src/pages/profile/libs/components/user-details/styles.module.css
+++ b/apps/frontend/src/pages/profile/libs/components/user-details/styles.module.css
@@ -2,7 +2,8 @@
 	display: flex;
 	flex-direction: column;
 	align-items: center;
-	width: 350px;
+	width: 100%;
+	max-width: 350px;
 	padding: 16px;
 	margin: 0 auto;
 }
@@ -29,13 +30,12 @@
 
 @media (width <= 768px) {
 	.user-details-container {
-		padding: 26px;
+		padding: 24px;
 	}
 }
 
 @media screen and (width <= 480px) {
 	.user-details-container {
-		max-width: 300px;
 		padding: 16px;
 	}
 }
