fix(frontend/shared): update auth header logic and remove unnecessary parts ss-182

--- a/apps/frontend/src/libs/components/header/styles.module.css
+++ b/apps/frontend/src/libs/components/header/styles.module.css
@@ -14,7 +14,6 @@
 
 .user-profile-wrapper {
 	position: relative;
-	cursor: pointer;
 }
 
 .user-info {
@@ -22,9 +21,13 @@
 	gap: 8px;
 	align-items: center;
 	padding: 8px 16px;
+	cursor: pointer;
+	background: none;
+	border: none;
 }
 
 .dropdown-arrow {
+	display: flex;
 	color: var(--color-fill-press);
 	transition: transform 0.2s ease-in-out;
 }
