--- a/apps/frontend/src/assets/css/variables.css
+++ b/apps/frontend/src/assets/css/variables.css
@@ -1,5 +1,6 @@
 :root {
 	--color-base: hsl(0deg 0% 100%);
+	--color-black: hsl(0deg 0% 0%);
 	--color-background-base: hsl(0deg 0% 100% / 100%);
 	--color-brand-1000: hsl(162deg 91% 25% / 100%);
 	--color-brand-800: hsl(162deg 91% 25% / 80%);
@@ -27,6 +28,7 @@
 	--color-icon-error: hsl(0deg 56% 50% / 80%);
 	--color-shadow-weak: hsl(0deg 0% 0% / 3.9%);
 	--color-shadow-strong: hsl(0deg 0% 0% / 7.8%);
+	--color-text-label: hsl(162deg 42% 17%);
 	--font-family: "Inter", sans-serif;
 	--font-size-display: 3.5rem;
 	--font-size-h1: 2.5rem;
