--- a/apps/frontend/src/libs/components/map-provider/styles.module.css
+++ b/apps/frontend/src/libs/components/map-provider/styles.module.css
@@ -7,19 +7,11 @@
 
 .map-overlays {
 	position: absolute;
-	top: 0;
-	left: 0;
-	width: 100%;
-	height: 100%;
-	pointer-events: none;
-}
-
-.map-overlays > * {
-	pointer-events: auto;
 }
 
 .map {
 	position: absolute;
+	inset: 0;
 	top: 0;
 	left: 0;
 	width: 100%;
