--- a/apps/frontend/src/libs/components/header/styles.module.css
+++ b/apps/frontend/src/libs/components/header/styles.module.css
@@ -1,10 +1,15 @@
 .header {
+	width: 100%;
+	border-bottom: 1px solid var(--color-stroke-weak);
+}
+
+.header-container {
 	display: flex;
 	align-items: center;
 	justify-content: space-between;
-	width: 100%;
-	padding: 12px 120px;
-	border-bottom: 1px solid var(--color-stroke-weak);
+	max-width: 1264px;
+	padding: 12px 32px;
+	margin: 0 auto;
 }
 
 .header-logo {
@@ -24,14 +29,8 @@
 	gap: 8px;
 }
 
-@media (width <= 991px) {
-	.header {
-		padding-inline: 32px;
-	}
-}
-
 @media (width <= 768px) {
-	.header {
-		padding-inline: 16px;
+	.header-container {
+		padding: 10px 16px;
 	}
 }
