--- a/apps/frontend/src/libs/components/textarea/styles.module.css
+++ b/apps/frontend/src/libs/components/textarea/styles.module.css
@@ -5,7 +5,7 @@
 	width: 100%;
 }
 
-.caption {
+.label-caption {
 	font-size: var(--font-size-small);
 	color: var(--color-text-strong);
 }
@@ -22,13 +22,35 @@
 	transition: background-color 0.2s ease-in-out;
 }
 
+.textarea,
+.textarea:hover {
+	background-color: var(--color-fill-hover);
+}
+
 .textarea:focus {
 	outline: 2px solid var(--color-stroke-focus);
 	outline-offset: 2px;
 	background-color: initial;
+	border: 1px solid var(--color-stroke-strong);
+}
+
+.textarea-error {
+	outline: none;
+	background-color: var(--color-fill-error-weak);
+	border: 2px solid var(--color-stroke-error-strong);
+}
+
+.textarea-error:hover,
+.textarea-error:focus {
+	background-color: var(--color-background-base);
 }
 
 .error {
+	display: inline-flex;
+	gap: 8px;
+	align-items: center;
 	font-size: var(--font-size-tiny);
-	color: var(--color-fill-error-weak);
+	font-weight: var(--font-weight-semibold);
+	line-height: 1.4;
+	color: var(--color-text-error);
 }
