--- a/apps/frontend/src/libs/components/header/libs/components/authenticated-header/styles.module.css
+++ b/apps/frontend/src/libs/components/header/libs/components/authenticated-header/styles.module.css
@@ -12,6 +12,12 @@
 	border: none;
 }
 
+.name {
+	font-family: var(--font-family);
+	line-height: 150%;
+	color: var(--color-text-strong);
+}
+
 .arrow-down {
 	display: flex;
 	color: var(--color-fill-press);
