--- a/apps/frontend/src/pages/dashboard/styles.module.css
+++ b/apps/frontend/src/pages/dashboard/styles.module.css
@@ -1,3 +1,7 @@
+.container {
+	width: 100%;
+}
+
 .components-container {
 	display: flex;
 	flex-direction: column;
@@ -12,7 +16,7 @@
 
 .carousel-container {
 	width: 50%;
-	margin-bottom: 2rem;
+	margin-bottom: 1rem;
 }
 
 .select-container {
