refactor(frontend): fix styles for mobile responsiveness ss-238

--- a/apps/frontend/src/pages/landing/libs/components/hero-section/styles.module.css
+++ b/apps/frontend/src/pages/landing/libs/components/hero-section/styles.module.css
@@ -43,4 +43,16 @@
 	.container {
 		padding: 48px 16px 32px;
 	}
+
+	.title {
+		font-size: var(--font-size-h1);
+	}
+
+	.description {
+		font-size: var(--font-size-small);
+	}
+
+	.cover {
+		aspect-ratio: 340 / 200;
+	}
 }
