--- a/apps/frontend/src/libs/components/header/styles.module.css
+++ b/apps/frontend/src/libs/components/header/styles.module.css
@@ -24,6 +24,8 @@
 
 @media (width <= 768px) {
 	.container {
-		padding: 8px 16px;
+		flex-wrap: wrap;
+		row-gap: 20px;
+		padding: 12px 16px;
 	}
 }
