--- a/apps/frontend/src/libs/components/sidebar/libs/components/sidebar-item/styles.module.css
+++ b/apps/frontend/src/libs/components/sidebar/libs/components/sidebar-item/styles.module.css
@@ -3,7 +3,7 @@
 	container-type: inline-size;
 }
 
-.item a {
+.link {
 	display: flex;
 	gap: 12px;
 	align-items: center;
@@ -17,20 +17,20 @@
 		color 0.4s ease;
 }
 
-.item a:hover {
+.link:hover {
 	color: var(--color-text-strong);
 	cursor: pointer;
 	background-color: var(--color-fill-weaker);
 }
 
-.item :global(a.active) {
+.link-active {
 	background-color: var(--color-brand-50);
 	border-left: 4px solid var(--color-stroke-selected);
 }
 
 .icon {
 	display: flex;
-	color: var(--color-stroke-strong);
+	color: var(--color-icon-neutral);
 }
 
 .label {
@@ -41,7 +41,7 @@
 }
 
 @container sidebar-item (max-width: 80px) {
-	.item a {
+	.link {
 		gap: 0;
 	}
 }
