--- a/apps/frontend/src/pages/landing/libs/components/hero-section/styles.module.css
+++ b/apps/frontend/src/pages/landing/libs/components/hero-section/styles.module.css
@@ -25,7 +25,7 @@
 .section-cover {
 	width: 100%;
 	aspect-ratio: 320 / 119;
-	background-image: url("/assets/images/landing-cover.jpg");
+	background-image: url("../../../../../assets/images/landing-cover.jpg");
 	background-repeat: no-repeat;
 	background-position: center;
 	background-size: cover;
