--- a/apps/frontend/src/libs/components/carousel/style.module.css
+++ b/apps/frontend/src/libs/components/carousel/style.module.css
@@ -41,7 +41,10 @@
 	object-fit: cover;
 	border-radius: 5%;
 	-webkit-user-drag: none;
+	transform: translateZ(0);
+	backface-visibility: hidden;
 	transition: transform 0.2s ease;
+	will-change: transform;
 }
 
 @media (width <= 768px) {
