--- a/apps/frontend/src/libs/components/table/styles.module.css
+++ b/apps/frontend/src/libs/components/table/styles.module.css
@@ -8,3 +8,39 @@
 .table-section {
 	width: 100%;
 }
+
+.table {
+	width: 100%;
+	margin-bottom: 16px;
+	text-align: left;
+	border: 2px solid var(--color-stroke-weak);
+}
+
+.tbody,
+.thead {
+	width: 100%;
+}
+
+.th,
+.td {
+	padding: 12px 24px;
+	font-size: 16px;
+	line-height: 150%;
+	border-bottom: 2px solid var(--color-stroke-weak);
+}
+
+.tbody .tr:last-child td {
+	border-bottom: none;
+}
+
+.th {
+	font-weight: 600;
+	color: var(--color-text-weak);
+	outline: none;
+	background: var(--color-fill-weak);
+}
+
+.td {
+	font-weight: 400;
+	color: var(--color-text-strong);
+}
