--- a/apps/frontend/src/pages/route/styles.module.css
+++ b/apps/frontend/src/pages/route/styles.module.css
@@ -2,7 +2,23 @@
 	display: flex;
 	flex-direction: column;
 	gap: 32px;
+	max-width: 1200px;
 	padding: 48px 120px;
+	margin: 0 auto;
+}
+
+@media (width <= 1440px) {
+	.container {
+		max-width: 1000px;
+		padding: 48px 80px;
+	}
+}
+
+@media (width <= 768px) {
+	.container {
+		max-width: none;
+		padding: 32px 40px;
+	}
 }
 
 .label {
@@ -10,4 +26,9 @@
 	font-weight: var(--font-weight-semibold);
 	line-height: 1.2;
 	color: var(--color-text-label);
+}
+
+.description {
+	margin: 0;
+	overflow-wrap: break-word;
 }
