--- a/apps/frontend/src/pages/points-of-interest-details/styles.module.css
+++ b/apps/frontend/src/pages/points-of-interest-details/styles.module.css
@@ -16,23 +16,36 @@
 
 .poi-gallery {
 	display: flex;
-	column-gap: 16px;
+	flex-wrap: wrap;
+	gap: 16px;
 	justify-content: space-between;
 }
 
 .poi-sub-gallery {
 	display: flex;
 	flex-direction: column;
-	row-gap: 16px;
+	gap: 16px;
 	justify-content: space-between;
 	min-width: 30%;
 }
 
 .poi-route-image {
+	max-width: 100%;
+}
+
+.poi-route-image,
+.poi-route-sub-image {
 	flex-grow: 1;
+	border-radius: 8px;
 }
 
 .poi-description {
 	font-size: var(--font-size-small);
 	line-height: 1.5;
+}
+
+@media (width <= 1300px) {
+	.poi-sub-gallery {
+		flex-direction: row;
+	}
 }
