--- a/apps/frontend/src/libs/components/header/styles.module.css
+++ b/apps/frontend/src/libs/components/header/styles.module.css
@@ -1,13 +1,18 @@
 .header {
-	display: flex;
-	align-items: center;
-	justify-content: space-between;
 	width: 100%;
-	padding: 12px 120px;
 	border-bottom: 1px solid var(--color-stroke-weak);
 }
 
-.header-logo {
+.container {
+	display: flex;
+	align-items: center;
+	justify-content: space-between;
+	max-width: var(--landing-container-width);
+	padding: 12px 32px;
+	margin: 0 auto;
+}
+
+.logo {
 	display: block;
 	margin: 0 auto;
 }
@@ -17,14 +22,10 @@
 	gap: 8px;
 }
 
-@media (width <= 991px) {
-	.header {
-		padding-inline: 32px;
-	}
-}
-
 @media (width <= 768px) {
-	.header {
-		padding-inline: 16px;
+	.container {
+		flex-wrap: wrap;
+		row-gap: 20px;
+		padding: 12px 16px;
 	}
 }
