--- a/apps/frontend/src/pages/landing/libs/components/popular-section/styles.module.css
+++ b/apps/frontend/src/pages/landing/libs/components/popular-section/styles.module.css
@@ -1,23 +1,40 @@
-.popular-section {
+.section {
+	width: 100%;
+}
+
+.container {
 	display: flex;
 	flex-direction: column;
 	gap: 32px;
-	width: 100%;
-	max-width: 1200px;
-	padding: 96px 0;
+	max-width: var(--landing-container-width);
+	padding: 96px 32px;
 	margin: 0 auto;
 }
 
-.popular-section .title {
+.title {
 	margin: 0;
 	font-size: var(--font-size-h2);
 	font-weight: var(--font-weight-semibold);
 	line-height: 1.3;
 }
 
-.popular-section .cards {
+.cards {
 	display: flex;
 	gap: 16px;
 	padding: 0;
+	padding-bottom: 20px;
 	margin: 0;
+	overflow-x: auto;
+}
+
+@media (width <= 991px) {
+	.container {
+		padding: 64px 32px 96px;
+	}
+}
+
+@media (width <= 768px) {
+	.container {
+		padding: 48px 16px 96px;
+	}
 }
