--- a/apps/frontend/src/libs/components/sidebar/styles.module.css
+++ b/apps/frontend/src/libs/components/sidebar/styles.module.css
@@ -13,7 +13,7 @@
 
 .drawer {
 	z-index: 1;
-	width: 74px;
+	width: var(--width-sidebar-collapsed);
 	height: 100%;
 	background-color: var(--color-background-base);
 	border-right: 1px solid var(--color-brand-50);
@@ -34,7 +34,7 @@
 }
 
 .drawer[data-open="true"] {
-	width: 320px;
+	width: var(--width-sidebar-expanded);
 }
 
 .header {
