--- a/apps/frontend/src/pages/route-description/libs/components/image-gallery/styles.module.css
+++ b/apps/frontend/src/pages/route-description/libs/components/image-gallery/styles.module.css
@@ -1,9 +1,12 @@
 .container {
 	display: grid;
 	grid-template-rows: repeat(2, 200px);
-	grid-auto-columns: calc((100% - (32px)) / 3);
+	grid-auto-columns: calc((100% - (2 * var(--container-gap))) / 3);
 	grid-auto-flow: column;
-	gap: 16px;
+
+	--container-gap: 16px;
+
+	gap: var(--container-gap);
 }
 
 .container > .image {
