--- a/apps/frontend/src/pages/dashboard/styles.module.css
+++ b/apps/frontend/src/pages/dashboard/styles.module.css
@@ -10,6 +10,15 @@
 	align-self: flex-start;
 }
 
+.button-container {
+	display: flex;
+	flex-wrap: wrap;
+	gap: 1rem;
+	justify-content: center;
+	width: 100%;
+	max-width: 600px;
+}
+
 .carousel-container {
 	width: 50%;
 	margin-bottom: 2rem;
