--- a/apps/frontend/src/libs/components/input/styles.module.css
+++ b/apps/frontend/src/libs/components/input/styles.module.css
@@ -22,12 +22,33 @@
 	color: var(--color-text-strong);
 }
 
+.input-container {
+	position: relative;
+	width: 100%;
+}
+
 .input {
+	position: relative;
+	width: 100%;
 	padding: 12px 16px;
 	font-size: var(--font-size-small);
 	line-height: 1.5;
+	background-color: var(--color-background-base);
 	border-radius: 8px;
 	transition: background-color 0.2s ease-in-out;
+}
+
+.input-right-icon-space {
+	padding-right: 50px;
+}
+
+.input,
+.input:focus {
+	border: 1px solid var(--color-stroke-strong);
+}
+
+.input:hover {
+	background-color: var(--color-fill-hover);
 }
 
 .input.input-error {
@@ -39,15 +60,6 @@
 .input-error:hover,
 .input-error:focus {
 	background-color: var(--color-fill-error-weak);
-}
-
-.input,
-.input:focus {
-	border: 1px solid var(--color-stroke-strong);
-}
-
-.input:hover {
-	background-color: var(--color-fill-hover);
 }
 
 .input:focus {
@@ -64,9 +76,30 @@
 	display: none;
 }
 
+.icon-right {
+	position: absolute;
+	top: 50%;
+	right: 2px;
+	display: flex;
+	align-items: center;
+	justify-content: center;
+	padding: 0 12px;
+	background-color: transparent;
+	border-radius: 8px;
+	transform: translateY(-50%);
+}
+
+.input:placeholder-shown {
+	padding-right: 16px;
+}
+
+.input:placeholder-shown ~ .icon-right {
+	display: none;
+}
+
 @media (width <= 768px) {
 	.input {
-		padding: 8px 10px;
+		padding: 8px 12px;
 	}
 
 	.label-caption {
