refactor(backend/frontend): apply changes from review comments ss-189

--- a/apps/frontend/src/libs/components/pagination/styles.module.css
+++ b/apps/frontend/src/libs/components/pagination/styles.module.css
@@ -3,7 +3,7 @@
 	align-items: center;
 	justify-content: space-between;
 	width: 100%;
-	font-size: 14px;
+	font-size: var(--font-size-tiny);
 	line-height: 143%;
 	color: var(--color-text-strong);
 }
@@ -34,7 +34,7 @@
 	width: 32px;
 	height: 32px;
 	padding: 5px 6px;
-	font-size: 20px;
+	font-size: var(--font-size-h4);
 	color: var(--color-fill-brand-strong);
 	background: transparent;
 	border: 1px solid var(--color-stroke-strong);
