--- a/apps/frontend/src/pages/route-description/libs/components/image-gallery/styles.module.css
+++ b/apps/frontend/src/pages/route-description/libs/components/image-gallery/styles.module.css
@@ -1,3 +1,7 @@
+.section {
+	overflow: hidden;
+}
+
 .container {
 	display: grid;
 	grid-template-rows: repeat(2, 200px);
@@ -7,9 +11,10 @@
 	--container-gap: 16px;
 
 	gap: var(--container-gap);
+	overflow: auto;
 }
 
-.container > .image {
+.image {
 	display: block;
 	width: 100%;
 	height: 100%;
@@ -17,24 +22,23 @@
 	border-radius: 8px;
 }
 
-.container > .image:first-child {
+.image:first-child {
 	grid-row: 1 / span 2;
 	grid-column: 1 / span 2;
 }
 
 @media (width <= 991px) {
 	.container {
-		grid-template-rows: none;
-		grid-template-columns: 1fr;
+		display: flex;
 	}
 
-	.container > .image {
+	.image {
 		width: 100%;
+		max-width: 300px;
 		height: auto;
-		aspect-ratio: 16/9;
 	}
 
-	.container > .image:first-child {
+	.image:first-child {
 		grid-row: auto;
 		grid-column: auto;
 	}
