--- a/apps/frontend/src/libs/components/explore-routes-block/styles.module.css
+++ b/apps/frontend/src/libs/components/explore-routes-block/styles.module.css
@@ -1,9 +1,30 @@
-.explore-routes-container {
+.container {
 	display: flex;
-	max-width: 464px;
+	flex-direction: column;
+	gap: 24px;
+	width: 464px;
+	max-height: calc(100vh - 110px);
 	padding: 24px 32px;
+	background-color: var(--color-base);
+	border: 1px solid var(--color-stroke-weak);
+	border-radius: 16px;
+}
+
+.title {
+	margin: 0;
+	font-family: var(--font-family);
+	font-size: var(--font-size-h3);
+	font-weight: var(--font-weight-semibold);
+	color: hsl(0deg 0% 0% / 100%);
+}
+
+.list {
+	display: flex;
+	flex-direction: column;
+	gap: 24px;
+	padding: 0;
+	margin: 0;
 	overflow-y: scroll;
 	scrollbar-width: none;
-	background-color: var(--color-base);
-	border-radius: 16px;
+	scroll-behavior: smooth;
 }
