--- a/apps/frontend/src/libs/components/map-location-field/styles.module.css
+++ b/apps/frontend/src/libs/components/map-location-field/styles.module.css
@@ -1,6 +1,34 @@
-.map-wrapper {
-	position: relative;
+.map-field {
+	display: flex;
+	flex-direction: column;
+	gap: 4px;
 	width: 100%;
-	height: 100%;
+}
+
+.label-caption {
+	font-size: var(--font-size-small);
+	font-weight: var(--font-weight-regular);
+	line-height: 1.5;
+	color: var(--color-text-strong);
+}
+
+.map-section {
+	height: 420px;
 	overflow: hidden;
+	border-radius: 8px;
+}
+
+.error {
+	display: inline-flex;
+	gap: 8px;
+	align-items: center;
+	font-size: var(--font-size-tiny);
+	font-weight: var(--font-weight-semibold);
+	line-height: 1.4;
+	color: var(--color-text-error);
+}
+
+.map-section-error {
+	background-color: var(--color-fill-error-weak);
+	border: 2px solid var(--color-stroke-error-strong);
 }
