--- a/apps/frontend/src/pages/routes/styles.module.css
+++ b/apps/frontend/src/pages/routes/styles.module.css
@@ -1,9 +1,6 @@
 .main {
 	display: flex;
 	flex-direction: column;
-	row-gap: 30px;
-	align-items: center;
-	justify-content: center;
-	margin: 0 auto;
+	margin: auto;
 	font-size: var(--font-size-display);
 }
