--- a/apps/frontend/src/pages/explore/styles.module.css
+++ b/apps/frontend/src/pages/explore/styles.module.css
@@ -3,6 +3,13 @@
 	flex-grow: 1;
 }
 
+.routes-container {
+	position: absolute;
+	top: 32px;
+	left: 32px;
+	z-index: 1;
+}
+
 .container {
 	flex-grow: 1;
 }
