--- a/apps/frontend/src/libs/components/link/styles.module.css
+++ b/apps/frontend/src/libs/components/link/styles.module.css
@@ -1,8 +1,8 @@
 .link {
 	color: var(--color-text-brand);
-	transition: all 0.3s ease;
+	transition: all 0.2s ease;
 }
 
 .link:hover {
-	color: var(--color-text-strong);
+	filter: brightness(70%);
 }
