--- a/apps/frontend/src/pages/points-of-interest-details/styles.module.css
+++ b/apps/frontend/src/pages/points-of-interest-details/styles.module.css
@@ -13,7 +13,7 @@
 	font-size: var(--font-size-h1);
 	font-weight: var(--font-weight-semibold);
 	line-height: 1.4;
-	color: var(--color-text-header);
+	color: var(--color-text-strong);
 }
 
 .description {
