fix(frontend): fix carousel scrolling issues ss-348

--- a/apps/frontend/src/assets/css/scaffolding.css
+++ b/apps/frontend/src/assets/css/scaffolding.css
@@ -38,6 +38,14 @@ body {
 	height: 16px;
 }
 
+::-webkit-scrollbar-thumb {
+	background: var(--color-fill-brand-strong);
+}
+
+::-webkit-scrollbar-track {
+	background: var(--color-background-base);
+}
+
 @supports (scrollbar-width: auto) {
 	html {
 		scrollbar-color: var(--color-fill-brand-strong) var(--color-background-base);
