--- a/apps/frontend/src/libs/components/explore-routes-block/styles.module.css
+++ b/apps/frontend/src/libs/components/explore-routes-block/styles.module.css
@@ -15,7 +15,7 @@
 	font-family: var(--font-family);
 	font-size: var(--font-size-h3);
 	font-weight: var(--font-weight-semibold);
-	color: hsl(0deg 0% 0% / 100%);
+	color: var(--color-text-strong);
 }
 
 .list {
