--- a/apps/frontend/src/pages/construct-route/styles.module.css
+++ b/apps/frontend/src/pages/construct-route/styles.module.css
@@ -1,5 +1,5 @@
 .main {
-	position: relative;
+	position: absolute;
 	width: 100%;
 	height: 100%;
 }
@@ -25,8 +25,9 @@
 
 .header {
 	display: flex;
-	gap: 134px;
+	gap: 96px;
 	align-items: center;
+	justify-content: space-between;
 }
 
 .title {
