--- a/apps/frontend/src/pages/route-description/libs/components/point-of-interest-section/styles.module.css
+++ b/apps/frontend/src/pages/route-description/libs/components/point-of-interest-section/styles.module.css
@@ -1,14 +1,7 @@
 .section {
-	width: 100%;
-}
-
-.container {
 	display: flex;
 	flex-direction: column;
 	gap: 32px;
-	max-width: var(--landing-container-width);
-	padding: 32px 0;
-	margin: 0 auto;
 }
 
 .title {
@@ -22,7 +15,13 @@
 	display: flex;
 	gap: 16px;
 	padding: 0;
-	padding-bottom: 20px;
+	padding-bottom: 16px;
 	margin: 0;
 	overflow-x: auto;
+}
+
+@media (width <= 991px) {
+	.title {
+		font-size: var(--font-size-h3);
+	}
 }
