refactor(backend/frontend/shared): refactor task according to the review ss-189

--- a/apps/frontend/src/libs/components/table/styles.module.css
+++ b/apps/frontend/src/libs/components/table/styles.module.css
@@ -1,7 +1,7 @@
 .title {
 	margin: 0 0 32px;
-	font-size: 32px;
-	line-height: 125%;
+	font-size: var(--font-size-h2);
+	line-height: 1.25;
 	color: var(--color-text-strong);
 }
 
@@ -16,37 +16,4 @@
 	table-layout: fixed;
 	border-collapse: collapse;
 	border: 2px solid var(--color-stroke-weak);
-}
-
-.tbody,
-.thead {
-	width: 100%;
-}
-
-.th,
-.td {
-	overflow: hidden;
-	text-overflow: ellipsis;
-	font-size: 16px;
-	line-height: 150%;
-	white-space: nowrap;
-	border-bottom: 2px solid var(--color-stroke-weak);
-}
-
-.td {
-	padding: 4px 24px;
-	font-weight: 400;
-	color: var(--color-text-strong);
-}
-
-.tbody .tr:last-child .td {
-	border-bottom: none;
-}
-
-.th {
-	padding: 12px 24px;
-	font-weight: 600;
-	color: var(--color-text-weak);
-	outline: none;
-	background: var(--color-fill-weak);
 }
