--- a/apps/frontend/src/libs/components/number-input/styles.module.css
+++ b/apps/frontend/src/libs/components/number-input/styles.module.css
@@ -18,8 +18,8 @@
 .input {
 	width: 16px;
 	padding: 0;
-	font-size: 14px;
-	line-height: 143%;
+	font-size: var(--font-size-tiny);
+	line-height: 1.5;
 	color: var(--color-text-strong);
 	outline: none;
 	border: none;
@@ -29,6 +29,10 @@
 .input::-webkit-inner-spin-button {
 	margin: 0;
 	appearance: none;
+}
+
+.input[type="number"] {
+	appearance: textfield;
 }
 
 .buttons {
@@ -41,14 +45,11 @@
 	align-items: center;
 	justify-content: center;
 	padding: 0;
+	color: var(--color-fill-brand-strong);
 	cursor: pointer;
 	outline: none;
 	background-color: transparent;
 	border: none;
-}
-
-.button svg path {
-	fill: var(--color-fill-brand-strong);
 }
 
 .button:active {
