--- a/apps/frontend/src/libs/components/pagination/styles.module.css
+++ b/apps/frontend/src/libs/components/pagination/styles.module.css
@@ -4,7 +4,7 @@
 	justify-content: space-between;
 	width: 100%;
 	font-size: var(--font-size-tiny);
-	line-height: 143%;
+	line-height: 1.5;
 	color: var(--color-text-strong);
 }
 
