--- a/apps/frontend/src/libs/components/table/libs/components/table-skeleton/styles.module.css
+++ b/apps/frontend/src/libs/components/table/libs/components/table-skeleton/styles.module.css
@@ -42,39 +42,23 @@
 	width: 85%;
 }
 
-.table {
-	width: 100%;
-	margin-bottom: 16px;
-	text-align: left;
-	border: 2px solid var(--color-stroke-weak);
-}
-
-.thead,
-.tbody {
-	width: 100%;
-}
-
 .th,
 .td {
 	padding: 12px 24px;
-	font-size: 16px;
-	line-height: 150%;
+	font-size: var(--font-size-small);
+	line-height: 1.5;
 	border-bottom: 2px solid var(--color-stroke-weak);
 }
 
-.tbody .tr:last-child td {
-	border-bottom: none;
-}
-
 .th {
-	font-weight: 600;
+	font-weight: var(--font-weight-semibold);
 	color: var(--color-text-weak);
 	outline: none;
 	background: var(--color-fill-weak);
 }
 
 .td {
-	font-weight: 400;
+	font-weight: var(--font-weight-regular);
 	color: var(--color-text-strong);
 }
 
