--- a/apps/frontend/src/pages/profile/libs/components/user-details/styles.module.css
+++ b/apps/frontend/src/pages/profile/libs/components/user-details/styles.module.css
@@ -10,6 +10,7 @@
 
 .user-details-avatar {
 	display: flex;
+	flex-direction: column;
 	gap: 16px;
 	align-items: center;
 	justify-content: center;
