--- a/apps/frontend/src/pages/explore/styles.module.css
+++ b/apps/frontend/src/pages/explore/styles.module.css
@@ -5,10 +5,11 @@
 
 .routes-container {
 	position: absolute;
-	top: 104px;
-	left: 104px;
+	top: 0;
+	left: 0;
 	z-index: 1;
 	max-height: 100%;
+	padding: 32px;
 }
 
 .container {
