--- a/apps/frontend/src/pages/explore/styles.module.css
+++ b/apps/frontend/src/pages/explore/styles.module.css
@@ -5,11 +5,10 @@
 
 .routes-container {
 	position: absolute;
-	top: 0;
-	left: 0;
+	top: 104px;
+	left: 104px;
 	z-index: 1;
 	max-height: 100%;
-	padding: 32px;
 }
 
 .container {
