--- a/apps/frontend/src/libs/components/button/styles.module.css
+++ b/apps/frontend/src/libs/components/button/styles.module.css
@@ -3,29 +3,19 @@
 	width: 100%;
 	min-width: fit-content;
 	padding: 12px 16px;
-	font-family: Inter, sans-serif;
+	font-family: var(--font-family);
 	font-size: var(--font-size-small);
 	line-height: 1.5;
-	color: var(--color-text-inverse-strong);
+	color: inherit;
 	text-align: center;
 	text-decoration: none;
-	background-color: var(--color-fill-brand-strong);
-	border: none;
-	border-radius: 8px;
-	box-shadow:
-		0 4px 8px -2px var(--color-shadow-weak),
-		0 2px 4px -2px var(--color-shadow-strong);
-	transition: background-color 0.3s ease;
-}
-
-.button:hover {
 	cursor: pointer;
-	background-color: var(--color-fill-press);
+	border-radius: 8px;
+	transition: all 0.3s ease;
 }
 
 .button:focus-visible {
 	outline: none;
-	background-color: var(--color-fill-press);
 }
 
 .button:focus-visible::after {
@@ -38,61 +28,55 @@
 }
 
 .button:disabled {
-	background-color: var(--color-fill-press);
-	box-shadow: none;
+	cursor: not-allowed;
 	opacity: 0.3;
 }
 
+.button-primary {
+	color: var(--color-text-inverse-strong);
+	background-color: var(--color-fill-brand-strong);
+	border: none;
+	box-shadow:
+		0 4px 8px -2px var(--color-shadow-weak),
+		0 2px 4px -2px var(--color-shadow-strong);
+}
+
+.button-primary:disabled {
+	background-color: var(--color-fill-press);
+	box-shadow: none;
+}
+
+.button-primary:hover:not(:disabled) {
+	background-color: var(--color-fill-press);
+}
+
+.button-primary:focus-visible:not(:disabled) {
+	background-color: var(--color-fill-press);
+}
+
 .button-outlined {
-	position: relative;
-	width: 100%;
-	min-width: fit-content;
-	padding: 12px 16px;
-	font-family: Inter, sans-serif;
-	font-size: var(--font-size-small);
-	line-height: 1.5;
 	color: var(--color-fill-brand-strong);
-	text-align: center;
-	text-decoration: none;
 	background-color: transparent;
 	border: 2px solid var(--color-fill-brand-strong);
-	border-radius: 8px;
-	transition: all 0.3s ease;
-}
-
-.button-outlined:hover {
-	color: var(--color-text-inverse-strong);
-	cursor: pointer;
-	background-color: var(--color-fill-brand-strong);
-}
-
-.button-outlined:focus-visible {
-	color: var(--color-text-inverse-strong);
-	outline: none;
-	background-color: var(--color-fill-brand-strong);
-}
-
-.button-outlined:focus-visible::after {
-	position: absolute;
-	inset: -4px;
-	content: "";
-	background: transparent;
-	border: 2px solid var(--color-fill-press);
-	border-radius: 12px;
 }
 
 .button-outlined:disabled {
 	color: var(--color-fill-press);
 	border-color: var(--color-fill-press);
-	opacity: 0.3;
+}
+
+.button-outlined:hover:not(:disabled) {
+	color: var(--color-text-inverse-strong);
+	background-color: var(--color-fill-brand-strong);
+}
+
+.button-outlined:focus-visible:not(:disabled) {
+	color: var(--color-text-inverse-strong);
+	background-color: var(--color-fill-brand-strong);
 }
 
 @media (width <= 768px) {
 	.button {
-		font-size: var(--font-size-tiny);
-	}
-
-	.button-outlined {
 		font-size: var(--font-size-tiny);
 	}
 }
