--- a/apps/frontend/src/libs/components/button/styles.module.css
+++ b/apps/frontend/src/libs/components/button/styles.module.css
@@ -46,10 +46,7 @@
 	box-shadow: none;
 }
 
-.button-primary:hover:not(:disabled) {
-	background-color: var(--color-fill-press);
-}
-
+.button-primary:hover:not(:disabled),
 .button-primary:focus-visible:not(:disabled) {
 	background-color: var(--color-fill-press);
 }
@@ -65,11 +62,7 @@
 	border-color: var(--color-fill-press);
 }
 
-.button-outlined:hover:not(:disabled) {
-	color: var(--color-text-inverse-strong);
-	background-color: var(--color-fill-brand-strong);
-}
-
+.button-outlined:hover:not(:disabled),
 .button-outlined:focus-visible:not(:disabled) {
 	color: var(--color-text-inverse-strong);
 	background-color: var(--color-fill-brand-strong);
