--- a/apps/frontend/src/pages/explore/libs/components/routes-panel/styles.module.css
+++ b/apps/frontend/src/pages/explore/libs/components/routes-panel/styles.module.css
@@ -2,7 +2,7 @@
 	display: flex;
 	flex-direction: column;
 	gap: 24px;
-	max-height: calc(100vh - 110px);
+	height: 100%;
 	padding: 24px 32px;
 	background-color: var(--color-base);
 	border: 1px solid var(--color-stroke-weak);
