--- a/apps/frontend/src/pages/explore/styles.module.css
+++ b/apps/frontend/src/pages/explore/styles.module.css
@@ -1,12 +1,14 @@
 .main {
+	position: relative;
 	display: flex;
 	flex-grow: 1;
 }
 
 .routes-container {
 	position: absolute;
-	top: 104px;
-	left: 104px;
+	top: 32px;
+	bottom: 64px;
+	left: 32px;
 	z-index: 1;
 	max-height: 100%;
 }
