--- a/apps/frontend/src/libs/components/pagination/styles.module.css
+++ b/apps/frontend/src/libs/components/pagination/styles.module.css
@@ -3,6 +3,7 @@
 	align-items: center;
 	justify-content: space-between;
 	width: 100%;
+	margin-top: 24px;
 	font-size: var(--font-size-tiny);
 	line-height: 1.5;
 	color: var(--color-text-strong);
