--- a/apps/frontend/src/pages/admin-dashboard/libs/components/points-of-interest-table/styles.module.css
+++ b/apps/frontend/src/pages/admin-dashboard/libs/components/points-of-interest-table/styles.module.css
@@ -1,5 +1,12 @@
+.container {
+	display: flex;
+	flex-direction: column;
+	height: 575px;
+}
+
 .title {
-	margin: 0 0 32px;
+	flex-shrink: 0;
+	margin: 0 0 24px;
 	font-size: var(--font-size-h2);
 	line-height: 1.25;
 	color: var(--color-text-strong);
