refactor(frontend): update icon styles ss-340

--- a/apps/frontend/src/pages/construct-route/libs/components/point-of-interest-card/styles.module.css
+++ b/apps/frontend/src/pages/construct-route/libs/components/point-of-interest-card/styles.module.css
@@ -19,15 +19,14 @@
 }
 
 .icon {
+	display: flex;
+	align-items: center;
+	justify-content: center;
 	color: var(--color-icon-neutral);
 }
 
 .icon:hover {
 	color: var(--color-text-strong);
-}
-
-.icon svg {
-	display: block;
 }
 
 .button {
